Pequeña corrección de algún comentario de cierre de tag que en vez de ".escaparate" debía indicar ".showcase"

--- a/M2_Exercici/index.html
+++ b/M2_Exercici/index.html
@@ -63,7 +63,7 @@
                     Book 5
                 </div>
             </div><!-- /.showcase-container -->
-        </div><!-- /#main-showcase.escaparate -->
+        </div><!-- /#main-showcase .showcase -->
 
         <!-- BESTSELLERS SHOWCASE -->
         <div id="bestsellers-showcase" class="showcase">
@@ -85,7 +85,7 @@
                     Book 5
                 </div>
             </div><!-- /.showcase-container -->
-        </div><!-- /#bestsellers-showcase.escaparate -->
+        </div><!-- /#bestsellers-showcase .showcase -->
 
         <!-- CATEGORIES SHOWCASE -->
         <div id="categories-showcase" class="showcase for-categories">
@@ -100,7 +100,7 @@
                     Category 3
                 </div>
             </div><!-- /.showcase-container -->
-        </div><!-- /#categories-showcase.escaparate -->
+        </div><!-- /#categories-showcase .showcase -->
 
         <!-- NEW RELEASES SHOWCASE -->
         <div id="new-releases-showcase" class="showcase">
@@ -122,7 +122,7 @@
                     Book 5
                 </div>
             </div><!-- /.showcase-container -->
-        </div><!-- /#new-releases-showcase.escaparate -->
+        </div><!-- /#new-releases-showcase .showcase -->
 
     </section><!-- /#main-container -->
 
