Correcció d'un comentari

--- a/M5-Javascript/02-Lletres_repetides/index.html
+++ b/M5-Javascript/02-Lletres_repetides/index.html
@@ -1,5 +1,5 @@
 <!--
-    NOTAS:
+    COMENTARIS:
     Ismael,
     tal i com vam parlar pel xat, he fet només l'Exercici 3 de "Entrega Lletres Repetides".
 
