Correcció del "type" pels emails

--- a/M5-Javascript/03-Validations/login.html
+++ b/M5-Javascript/03-Validations/login.html
@@ -135,7 +135,7 @@
                                 <div class="form-row">
                                     <div class="form-group col-12">
                                         <label for="loginEmail" class="required">Email</label>
-                                        <input type="text" class="form-control" id="loginEmail" name="loginEmail"
+                                        <input id="loginEmail" name="loginEmail" type="email" class="form-control"
                                                placeholder="Email">
                                         <div class="invalid-feedback" id="loginEmailError"></div>
                                     </div>
@@ -166,7 +166,7 @@
                             <div class="form-row">
                                 <div class="form-group col-12">
                                     <label for="signupEmail" class="required">Email</label>
-                                    <input id="signupEmail" name="signupEmail" type="text" class="form-control"
+                                    <input id="signupEmail" name="signupEmail" type="email" class="form-control"
                                            placeholder="Email">
                                     <div class="invalid-feedback" id="signupEmailError"></div>
 
